fix footer align

--- a/src/styles.css
+++ b/src/styles.css
@@ -39,6 +39,5 @@ h3 {
 }
 
 footer {
-  position: relative;
   text-align: center;
 }
